@@ -14,8 +14,8 @@
 package com.google.devtools.build.lib.unix;
 
 import static com.google.common.truth.Truth.assertThat;
-import static com.google.devtools.build.lib.testutil.MoreAsserts.assertThrows;
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.fail;
 import static org.junit.Assume.assumeTrue;
 
@@ -84,7 +84,8 @@ public class NativePosixFilesTest {
     assumeXattrsSupported();
 
     String myfile = Files.createTempFile("getxattrtest", null).toString();
-    Runtime.getRuntime().exec("xattr -w foo bar " + myfile).waitFor();
+    assertThat(new ProcessBuilder("xattr", "-w", "foo", "bar", myfile).start().waitFor())
+        .isEqualTo(0);
 
     assertThat(new String(NativePosixFiles.getxattr(myfile, "foo"), UTF_8)).isEqualTo("bar");
     assertThat(new String(NativePosixFiles.lgetxattr(myfile, "foo"), UTF_8)).isEqualTo("bar");
